final submission, additional features

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="bk">#99000d</color>
+    <color name="stacked">#bdbdbd</color>
+    <color name="bksp">#f0f0f0</color>
 </resources>
